fixed the horizontal scrolling issue

--- a/src/styles/glassmorphic.css
+++ b/src/styles/glassmorphic.css
@@ -22,6 +22,10 @@
   --easing-decelerate: cubic-bezier(0, 0, 0.2, 1);
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   background: linear-gradient(-45deg, #121223, #1d1d35, #24243e, #252540);
   background-size: 400% 400%;
